--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "mocha -r ts-node/register --bail ./test/**/*Test.ts",
         "build": "webpack --mode production",
-        "start": "webpack-dev-server --content-base=dist --inline --watch --hot"
+        "start": "webpack-dev-server --port 80 --historyApiFallback --disableHostCheck --content-base=dist --inline --watch --hot"
     },
     "devDependencies": {
         "@types/chai": "^4.2.7",
@@ -17,6 +17,7 @@
         "@types/react-dom": "^16.9.4",
         "@types/react-router-dom": "^5.1.3",
         "chai": "^4.2.0",
+        "file-loader": "^5.0.2",
         "html-webpack-plugin": "^3.2.0",
         "mocha": "^6.2.2",
         "react": "^16.12.0",
@@ -26,6 +27,7 @@
         "ts-node": "^8.5.4",
         "tslint": "^5.20.1",
         "typescript": "^3.7.3",
+        "web-api-hooks": "^2.2.2",
         "webpack": "^4.41.3",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.9.0"
