--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/chai": "^4.2.7",
         "@types/mocha": "^5.2.7",
         "@types/node": "^12.12.20",
+        "@types/query-string": "^6.3.0",
         "@types/react": "^16.9.16",
         "@types/react-dom": "^16.9.4",
         "@types/react-router-dom": "^5.1.3",
@@ -20,6 +21,7 @@
         "file-loader": "^5.0.2",
         "html-webpack-plugin": "^3.2.0",
         "mocha": "^6.2.2",
+        "query-string": "^6.9.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router-dom": "^5.1.2",
