--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@types/react-dom": "^16.9.4",
         "@types/react-router-dom": "^5.1.3",
         "chai": "^4.2.0",
+        "css-loader": "^3.4.0",
+        "eslint-plugin-react-hooks": "^2.3.0",
         "file-loader": "^5.0.2",
         "html-webpack-plugin": "^3.2.0",
         "mocha": "^6.2.2",
@@ -25,6 +27,7 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router-dom": "^5.1.2",
+        "style-loader": "^1.1.2",
         "ts-loader": "^6.2.1",
         "ts-node": "^8.5.4",
         "tslint": "^5.20.1",
