--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,10 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
+    if ($http_x_forwarded_proto = "http") {
+        return 301 https://$host$request_uri;
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html;
