--- a/package.json
+++ b/package.json
@@ -2,39 +2,40 @@
     "version": "2.2.4",
     "author": "hattmo",
     "license": "GPL-3.0-or-later",
-    "name": "@hattmo/compositecalendar",
-    "description": "Combined and Filters Google Calendars",
+    "name": "@hattmo/compositecalendarclient",
+    "description": "Client App for composite calendar",
     "scripts": {
         "test": "mocha -r ts-node/register --bail ./test/**/*Test.ts",
         "build": "webpack --mode production",
-        "start": "webpack-dev-server --port 80 --historyApiFallback --disableHostCheck --content-base=dist --inline --watch --hot"
+        "start": "webpack-dev-server --watch"
     },
     "devDependencies": {
-        "@types/chai": "^4.2.7",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^13.1.2",
+        "@types/chai": "^4.2.11",
+        "@types/mocha": "^7.0.2",
+        "@types/node": "^13.9.8",
         "@types/query-string": "^6.3.0",
-        "@types/react": "^16.9.17",
-        "@types/react-dom": "^16.9.4",
+        "@types/react": "^16.9.29",
+        "@types/react-dom": "^16.9.5",
         "@types/react-router-dom": "^5.1.3",
+        "@types/webpack": "^4.41.10",
+        "@types/webpack-dev-server": "^3.10.1",
         "chai": "^4.2.0",
-        "css-loader": "^3.4.0",
-        "eslint-plugin-react-hooks": "^2.3.0",
-        "file-loader": "^5.0.2",
-        "html-webpack-plugin": "^3.2.0",
-        "mocha": "^6.2.2",
-        "query-string": "^6.9.0",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
+        "css-loader": "^3.4.2",
+        "eslint-plugin-react-hooks": "^3.0.0",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.0.3",
+        "mocha": "^7.1.1",
+        "query-string": "^6.11.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
-        "style-loader": "^1.1.2",
-        "ts-loader": "^6.2.1",
-        "ts-node": "^8.5.4",
-        "tslint": "^5.20.1",
-        "typescript": "^3.7.4",
-        "web-api-hooks": "^2.2.2",
-        "webpack": "^4.41.5",
-        "webpack-cli": "^3.3.10",
-        "webpack-dev-server": "^3.10.1"
+        "style-loader": "^1.1.3",
+        "ts-loader": "^6.2.2",
+        "ts-node": "^8.8.1",
+        "tslint": "^6.1.0",
+        "typescript": "^3.8.3",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
     }
 }
