--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,18 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v1
+
       - name: Setup Node
         uses: actions/setup-node@v1.3.0
+
       - name: Install Dependencies
         run: npm ci
+
       - name: Run Test Scripts
         run: npm test
+
       - name: Publish to Docker Hub
-        if: startsWith(github.ref,'refs/tags/')
+        if: startsWith(github.ref,'refs/tags/') && github.ref == 'refs/heads/master'
         env:
           DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
           DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
@@ -27,7 +31,8 @@ jobs:
           docker build -t $TF_VAR_APPNAME:latest -t $TF_VAR_APPNAME:$TF_VAR_VERSION .
           docker push $TF_VAR_APPNAME:latest
           docker push $TF_VAR_APPNAME:$TF_VAR_VERSION
-      - name: "Terraform Init"
+
+      - name: Terraform Init
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.21
@@ -35,7 +40,8 @@ jobs:
           tf_actions_comment: false
         env:
           GOOGLE_CREDENTIALS: ${{secrets.GOOGLE_CREDENTIALS}}
-      - name: "Terraform Plan"
+
+      - name: Terraform Plan
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.21
@@ -43,8 +49,9 @@ jobs:
           tf_actions_comment: false
         env:
           GOOGLE_CREDENTIALS: ${{secrets.GOOGLE_CREDENTIALS}}
-      - name: "Terraform Apply"
-        if: startsWith(github.ref,'refs/tags/')
+
+      - name: Terraform Apply
+        if: startsWith(github.ref,'refs/tags/') && github.ref == 'refs/heads/master'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.21
