--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm test
 
       - name: Publish to Docker Hub
-        if: startsWith(github.ref,'refs/tags/') && github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         env:
           DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
           DOCKERHUB_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
@@ -51,7 +51,7 @@ jobs:
           GOOGLE_CREDENTIALS: ${{secrets.GOOGLE_CREDENTIALS}}
 
       - name: Terraform Apply
-        if: startsWith(github.ref,'refs/tags/') && github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.21
